kubernetes/traefik-auth/02-deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-auth
  labels:
    app: traefik-auth

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik-auth
  template:
    metadata:
      labels:
        app: traefik-auth
    spec:
      containers:
        - name: traefik-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 100m
