kubernetes/traefik-auth/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-forward-auth
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - protocol: TCP
      port: 4181
      targetPort: 4181
