kubernetes/traefik-auth/03-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-auth
  labels:
    app: traefik-auth

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.zzd.ai`)
      kind: Rule
      services:
        - name: traefik-auth
          port: 4181
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
