kubernetes/traefik-auth/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-auth-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.e2.pe`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-auth-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.e2.pe`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
